# Crazy-Eights

./: .gitignore  CMakeLists.txt
include/: Card.hpp  Player.hpp  StockPile.hpp
src/: Card.cpp  Heap.cpp  Player.cpp  StockPile.cpp  main.cpp
